--- a/templates/services/index.html.twig
+++ b/templates/services/index.html.twig
@@ -48,7 +48,7 @@
                             <img src="{{ asset('img/icon/inspiration.svg') }}" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="#personal-appointments">Rendez-vous individuel</a></h5>
+                            <h5><a href="#personal-appointments">Rendez-vous individuel ou groupé</a></h5>
                             <p>Profitez d'une séance de musicothérapie personnalisée et voyez comment la musique peut vous aider à être en meilleure santé</p>
                             <a href="#personal-appointments" class="plus-btn"><i class="ti-plus"></i></a>
                         </div>
@@ -60,15 +60,15 @@
                             <img src="{{ asset('img/icon/add-group.svg') }}" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="#group-sessions">Ateliers groupés</a></h5>
-                            <p>Redynamisez votre groupe avec des ateliers interactifs avec notamment des instruments de musique</p>
+                            <h5><a href="#group-sessions">Ateliers groupés en lgine</a></h5>
+                            <p>Redynamisez votre groupe avec des ateliers interactifs en ligne de découverte de la musicothérapie</p>
                             <a href="#group-sessions" class="plus-btn"><i class="ti-plus"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="section-top-border" id="personal-appointments">
-                <h3 class="mb-30">RDV individuels : horaires disponibles</h3>
+                <h3 class="mb-30">Rendez-vous : horaires disponibles</h3>
                 <div class="progress-table-wrap">
                     <div class="progress-table">
                         <div class="table-head">
@@ -95,25 +95,29 @@
                 </div>
             </div>
             <div class="section-top-border" id="group-sessions" >
-                <h3 class="mb-30">Ateliers groupés : horaires disponibles</h3>
+                <h3 class="mb-30">Ateliers groupés en ligne : horaires disponibles</h3>
                 <div class="progress-table-wrap">
                     <div class="progress-table">
                         <div class="table-head">
+                            <div class="title">Titre</div>
                             <div class="date">Date</div>
                             <div class="hour">Heure</div>
                             <div class="select"></div>
                         </div>
                         <div class="table-row">
+                            <div class="title">Titre</div>
                             <div class="date">26 mai 2021</div>
                             <div class="hour">18:00</div>
                             <div class="select"><a href="{{ path('confirmBooking') }}" class="genric-btn primary">Sélectionner</a></div>
                         </div>
                         <div class="table-row">
+                            <div class="title">Titre</div>
                             <div class="date">31 mai 2021</div>
                             <div class="hour">11:30</div>
                             <div class="select"><a href="{{ path('confirmBooking') }}" class="genric-btn primary">Sélectionner</a></div>
                         </div>
                         <div class="table-row">
+                            <div class="title">Titre</div>
                             <div class="date">05 juin 2021</div>
                             <div class="hour">15:00</div>
                             <div class="select"><a href="{{ path('confirmBooking') }}" class="genric-btn primary">Sélectionner</a></div>
