--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        {% block additionalMeta %}{% endblock %}
 
         <title>{% block title %}Beya Musicothérapie{% endblock %}</title>
 
