Larges avancements dans la réservation des rendez vous et des ateliers en ligne

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2977,6 +2977,12 @@ hr {
   }
 }
 
+.flash-notif {
+  font-style: italic;
+  font-size: 2.25rem;
+  margin-top: -5rem;
+}
+
 .about-area2 .about-caption {
   padding-left: 50px;
 }
