--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,6 +11,13 @@
                 <!-- Slider Single -->
                 <div class="single-slider d-flex align-items-center slider-height">
                     <div class="container">
+                        {% for message in app.flashes('success') %}
+                        <div class="row">
+                            <div class="col-12">
+                                <p class="flash-notif col-6">{{ message }}</p>
+                            </div>
+                        </div>
+                        {% endfor %}
                         <div class="row align-items-center">
                             <div class="col-xl-7 col-lg-8 col-md-10 ">
                                 <div class="hero-wrapper">
