--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4928,7 +4928,8 @@ hr {
 .contact-info__icon {
   margin-right: 20px;
 }
-.contact-info__icon i, .contact-info__icon span {
+.contact-info__icon i,
+.contact-info__icon span {
   color: #8f9195;
   font-size: 27px;
 }
@@ -4953,6 +4954,10 @@ hr {
   margin-bottom: 20px;
 }
 
+.form .error-message li {
+  font-size: 1.75rem;
+  margin-bottom: 7px;
+}
 .form label {
   font-size: 14px;
 }
