--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -1,102 +1,99 @@
 /*=================== banner start ====================*/
 
 .dropdown .dropdown-menu {
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -ms-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
 }
-.contact-info{
-  margin-bottom: 25px;
 
-  &__icon{
-    margin-right: 20px;
-
-    i,span{
-      color: #8f9195;
-      font-size: 27px;
-    }
-  }
-
-  .media-body{
-
-    h3{
-      font-size: 16px;
-      margin-bottom: 0;
-      font-size: 16px;
-      color: #2a2a2a;
-      a{
-        &:hover{
-          color: $theme-color2;
+.contact-info {
+    margin-bottom: 25px;
+    &__icon {
+        margin-right: 20px;
+        i,
+        span {
+            color: #8f9195;
+            font-size: 27px;
         }
-      }
     }
-
-    p{
-      color: #8a8a8a;
+    .media-body {
+        h3 {
+            font-size: 16px;
+            margin-bottom: 0;
+            font-size: 16px;
+            color: #2a2a2a;
+            a {
+                &:hover {
+                    color: $theme-color2;
+                }
+            }
+        }
+        p {
+            color: #8a8a8a;
+        }
     }
-  }
 }
+
+
 /*=================== banner end ====================*/
 
 
 /*=================== form start ====================*/
-.contact-title{
-  font-size: 27px;
-  font-weight: 600;
-  margin-bottom: 20px;
+
+.contact-title {
+    font-size: 27px;
+    font-weight: 600;
+    margin-bottom: 20px;
 }
 
-.form{
-
-  label{
-    font-size: 14px;
-  }
-
-  .form-group{
-    margin-bottom: 30px;
-  }
-
-  .form-control{
-    border: 1px solid #e5e6e9;
-    border-radius: 0px;
-    height: 48px;
-    padding-left: 18px;
-    font-size: 13px;
-    background: transparent;
-
-    &:focus{
-      outline: 0;
-      box-shadow: none;
+.form {
+    .error-message li {
+        font-size: 1.75rem;
+        margin-bottom: 7px;
     }
-
-    &::placeholder{
-      font-weight: 300;
-      color: #999999;
+    label {
+        font-size: 14px;
     }
-  }
-
-  .alert {
-    font-size: 1.6em;
-  }
-
-  textarea{
-    border-radius: 0px;
-    height: 100% !important;
-    padding-top: 1em;
-  }
-
-  .other-text {
-    font-size: 1.8em;
-  }
+    .form-group {
+        margin-bottom: 30px;
+    }
+    .form-control {
+        border: 1px solid #e5e6e9;
+        border-radius: 0px;
+        height: 48px;
+        padding-left: 18px;
+        font-size: 13px;
+        background: transparent;
+        &:focus {
+            outline: 0;
+            box-shadow: none;
+        }
+        &::placeholder {
+            font-weight: 300;
+            color: #999999;
+        }
+    }
+    .alert {
+        font-size: 1.6em;
+    }
+    textarea {
+        border-radius: 0px;
+        height: 100% !important;
+        padding-top: 1em;
+    }
+    .other-text {
+        font-size: 1.8em;
+    }
 }
+
 
 /*=================== form end ====================*/
 
+
 /* Contact Success and error Area css
 ============================================================================================ */
-
 
 .modal-message {
     .modal-dialog {
@@ -135,24 +132,22 @@
         }
     }
 }
-.form-section{
-  padding: 130px 0 100px;
-  @media #{$tab}{
-    padding: 70px 0 40px;
-  }
-  @media #{$medium_device}{
-    padding: 80px 0 50px;
-  }
-  .btn_2{
-    background-color:#191d34;
-    padding: 18px 60px;
-    border-radius: 50px;
-    margin-top: 0;
-    &:hover{
-      background-color: $theme-color2;
-      
+
+.form-section {
+    padding: 130px 0 100px;
+    @media #{$tab} {
+        padding: 70px 0 40px;
     }
-  }
+    @media #{$medium_device} {
+        padding: 80px 0 50px;
+    }
+    .btn_2 {
+        background-color: #191d34;
+        padding: 18px 60px;
+        border-radius: 50px;
+        margin-top: 0;
+        &:hover {
+            background-color: $theme-color2;
+        }
+    }
 }
-
-
