--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -60,7 +60,7 @@
                                     <img src="img/gallery/blog1.png" alt="">
                                 </div>
                                 <div class="blog-cap">
-                                    <h3><a href="blog_details.html">Your daily meal plan</a></h3>
+                                    <h3><a href="blog_details.html">La musicothérapie détend</a></h3>
                                     <P>Praesent porttitor, nulla vitae posuere iaculis, arcu nisl dignissim dolor, a pretium mi
                                         sem ut ipsum.</P>
                                 </div>
@@ -74,7 +74,7 @@
                                     <img src="img/gallery/blog2.png" alt="">
                                 </div>
                                 <div class="blog-cap">
-                                    <h3><a href="blog_details.html">Food is a great source of  medicine</a></h3>
+                                    <h3><a href="blog_details.html">C'est une pratique nouvelle et peu répandue</a></h3>
                                     <P>Praesent porttitor, nulla vitae posuere iaculis, arcu nisl dignissim dolor, a pretium mi
                                         sem ut ipsum.</P>
                                 </div>
@@ -88,7 +88,7 @@
                                     <img src="img/gallery/blog3.png" alt="">
                                 </div>
                                 <div class="blog-cap">
-                                    <h3><a href="blog_details.html">Everyday diet plan</a></h3>
+                                    <h3><a href="blog_details.html">Elle peut également être pratiquée en groupe !</a></h3>
                                     <P>Praesent porttitor, nulla vitae posuere iaculis, arcu nisl dignissim dolor, a pretium mi
                                         sem ut ipsum.</P>
                                 </div>
