--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -15,7 +15,7 @@
                             <div class="hero-wrapper">
                             <div class="hero__caption">
                                 <h1 data-animation="fadeInUp" data-delay=".3s">Qui suis-je ?</h1>
-                                <p data-animation="fadeInUp" data-delay=".6s">Almost before we knew it, we<br> had left the ground</p>
+                                <p data-animation="fadeInUp" data-delay=".6s">Mon long parcours dans le domaine de la musicothérapie</p>
                             </div>
                         </div>
                     </div>
@@ -38,14 +38,15 @@
             <div class="col-lg-7 col-md-12">
                 <div class="about-caption mb-50">
                     <!-- Section Tittle -->
-                    <div class="section-tittle mb-35">
-                        <h2>Create a healthy 
-                        life you love!</h2>
-                    </div>
-                    <p class="pera-top mb-40">Almost before we knew it, we had left the ground</p>
-                    <p class="pera-bottom mb-30">Praesent porttitor, nulla vitae posuere iaculis, arcu nisl
+                    
+                    <p class="pera-bottom mb-30">
+                        Praesent porttitor, nulla vitae posuere iaculis, arcu nisl
+                            dignissim dolor, a pretium mi sem ut ipsum. Fusce
+                        fermentum. Pellentesque libero tortor, tincidunt et.
+                        Praesent porttitor, nulla vitae posuere iaculis, arcu nisl
                         dignissim dolor, a pretium mi sem ut ipsum. Fusce
-                    fermentum. Pellentesque libero tortor, tincidunt et.</p>
+                    fermentum. Pellentesque libero tortor, tincidunt et.
+                    </p>
                 </div>
             </div>
         </div>
